fix: починены все методы
#INTERNSHIP-51
