# src/main/resources/apispec.yaml
@@ -95,35 +95,7 @@ paths:
 
 
   /order:
-    put:
-      tags:
-        - order
-      summary: Update an existing order
-      description: Update an existing order by Id
-      operationId: updateOrder
-      requestBody:
-        description: Replace an existent order
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/orderDTO'
-        required: true
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/orderDTO'
 
-        '400':
-          description: Invalid ID supplied
-        '404':
-          description: Order not found
-        '405':
-          description: Validation exception
-        '500':
-          description: Server Error
 
     get:
       tags:
@@ -182,6 +154,44 @@ paths:
 
 
   /order/{orderId}:
+    put:
+      tags:
+        - order
+      summary: Update an existing order
+      description: Update an existing order by Id
+      operationId: updateOrder
+      parameters:
+        - name: orderId
+          in: path
+          description: Id of order to replace
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        description: Replace an existent order
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/orderDTO'
+        required: true
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/orderDTO'
+
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Order not found
+        '405':
+          description: Validation exception
+        '500':
+          description: Server Error
+
     get:
       tags:
         - order
@@ -327,6 +337,7 @@ components:
           type: boolean
         status:
           $ref: '#/components/schemas/status'
+
 
 
 
